[package]
name = "choo"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/choooxide/choo"
documentation = "https://docs.rs/choo"
description = "Small rendering framework"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]

[dev-dependencies]
